--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
-		"@jsbursik/magic-ui": "0.1.3-beta",
+		"@jsbursik/magic-ui": "0.1.6-beta",
 		"@tabler/icons-svelte": "^3.35.0",
 		"better-auth": "^1.3.27",
-		"postgres": "^3.4.7"
+		"postgres": "^3.4.7",
+		"prism-code-editor": "^4.1.0"
 	}
 }
