Claude actually worked - was too lazy to write code

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Replace with your DB credentials!
 DATABASE_URL="postgres://user:password@host:port/db-name"
+
+# TFTP root directory for phone config files
+TFTP_ROOT="/tftp-root"
